# VStabiliser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  CustomVStabiliser.cpp  CustomVStabiliser.h  CustomVStabiliserVersion.h  CustomVStabiliserVersion.h.in
src/: CMakeLists.txt  VStabiliser.cpp  VStabiliser.h  VStabiliserVersion.h  VStabiliserVersion.h.in
test/: CMakeLists.txt  main.cpp
